loops with abigail

--- a/Python_Loops.ipynb
+++ b/Python_Loops.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "db95a113",
    "metadata": {
     "deletable": false,
@@ -114,8 +114,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#For\n",
+    "#while"
    ]
   },
   {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1aa7533a",
    "metadata": {
     "deletable": false,
@@ -159,11 +159,31 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1  is odd\n",
+      "2  is even\n",
+      "3  is odd\n",
+      "4  is even\n",
+      "5  is odd\n",
+      "6  is even\n",
+      "7  is odd\n",
+      "8  is even\n",
+      "9  is odd\n",
+      "10  is even\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "for i in range(1, 11):  # A sequence from 1 to 10\n",
+    "    if i % 2 == 0:\n",
+    "        print(i, \" is even\")\n",
+    "    else:\n",
+    "        print(i, \" is odd\")"
    ]
   },
   {
@@ -192,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9e8f1860",
    "metadata": {
     "deletable": false,
@@ -208,12 +228,26 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.5, 16.42, 10.77, 8.3, 34.21]\n",
+      "[5.0, 32.84, 21.54, 16.6, 68.42]\n"
+     ]
+    }
+   ],
    "source": [
     "float_list = [2.5, 16.42, 10.77, 8.3, 34.21]\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "float_list = [2.5, 16.42, 10.77, 8.3, 34.21]\n",
+    "print(float_list)\n",
+    "\n",
+    "for i in range(0, len(float_list)):  # Iterator traverses to the last index of the list\n",
+    "    float_list[i] = float_list[i] * 2\n",
+    "\n",
+    "print(float_list)"
    ]
   },
   {
@@ -244,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "78bb43a2",
    "metadata": {
     "deletable": false,
@@ -260,12 +294,26 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "float_list = [2.5, 16.42, 10.77, 8.3, 34.21]\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "float_list = [2.5, 16.42, 10.77, 8.3, 34.21]\n",
+    "count_greater = 0\n",
+    "\n",
+    "for num in float_list:  # Iterator traverses to the last index of the list\n",
+    "    if num > 10:\n",
+    "        count_greater += 1\n",
+    "\n",
+    "print(count_greater)"
    ]
   },
   {
@@ -293,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8bcc51bf",
    "metadata": {
     "deletable": false,
@@ -309,13 +357,28 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23 27\n",
+      "27 23\n"
+     ]
+    }
+   ],
    "source": [
     "n = 50\n",
     "num_list = [10, 4, 23, 6, 18, 27, 47]\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "n = 50\n",
+    "num_list = [10, 25, 4, 23, 6, 18, 27, 47]\n",
+    "\n",
+    "for n1 in num_list:\n",
+    "    for n2 in num_list:  # Now we have two iterators\n",
+    "        if(n1 != n2):\n",
+    "            if(n1 + n2 == n):\n",
+    "                print(n1, n2)"
    ]
   },
   {
@@ -364,8 +427,9 @@
    "outputs": [],
    "source": [
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# It can break the loop whenever we want\n",
+    "# The rest of that particular iteration is skipped\n",
+    "# place holder"
    ]
   },
   {
@@ -394,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f70863fe",
    "metadata": {
     "deletable": false,
@@ -410,11 +474,24 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "n = 2  # Could be any number\n",
+    "power = 0\n",
+    "val = n\n",
+    "while val < 1000:\n",
+    "    power += 1\n",
+    "    val *= n\n",
+    "print(power)"
    ]
   },
   {
@@ -445,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "92b9c0b7",
    "metadata": {
     "deletable": false,
@@ -461,18 +538,32 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
    "source": [
     "n = 249\n",
+    "n = 249\n",
+    "last = n % 10  # Finding the last number is easy\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "first = n  # Set it to `n` initially\n",
+    "while first >= 10:\n",
+    "    first //= 10  # Keep dividing by 10 until the leftmost digit is reached.\n",
+    "\n",
+    "result = first + last\n",
+    "print(result)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -486,7 +577,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
